<resources>
    <!-- string.xml -->
    <string name="app_name">ReStock</string>
    <string name="action_settings">Settings</string>

    <!-- fragments nav -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <!-- toolbar -->
    <string name="profile_icon_desc">Profile Icon</string>
    <string name="notification_desc">Notifications</string>

    <!-- pantry title -->
    <string name="pantry_title">User’s Pantry</string>

    <!-- search bar -->
    <string name="search_icon_desc">Search</string>
    <string name="search_hint">Search Pantry..</string>
    <string name="mic_icon_desc">Voice Search</string>
    <string name="filter_icon_desc">Filter Pantry</string>

    <!-- footer navigation -->
    <string name="pantry_icon_desc">Pantry</string>
    <string name="list_icon_desc">List</string>
    <string name="store_icon_desc">Store</string>
    <string name="pantry_label">Pantry</string>
    <string name="list_label">List</string>
    <string name="store_label">Store</string>

    <!-- Pantry Item List -->
    <string name="add_item">Add a new pantry item</string>
    <string name="low_stock_indicator">Indicator showing low stock</string>
    <string name="quantity_text">Qty: %d</string>
    <string name="item_name_example">Item Name</string>
    <string name="item_quantity_example">Qty: 0</string>
    <string name="item_expiration_date_example">Expiration Date</string>
    <string name="barcode_icon_desc">Barcode Icon</string>

    <string name="sort_by">Sort By</string>

    <string name="item_name_label">Item Name</string>
    <string name="item_name_value">Sample Item Name</string>
    <string name="item_quantity_label">Quantity</string>
    <string name="item_quantity_value">3</string>
    <string name="edit_button">Edit</string>

    <!-- Grocery Item List -->
    <string name="grocery_list">Grocery List</string>
    <string name="edit_icon_desc">Edit item</string>
    <string name="item_img_desc">Image of item</string>

    <string name="store_title">Stores</string>
    <string name="select_store_button_text">Select Store</string>
    <string name="store_produce_button_text">Store Produce</string>
    <string name="map_view_desc">Map View Placeholder</string>
    <string name="store_name_text">Store Name</string>
    <string name="store_address_text">123 Main Street</string>
    <string name="store_city_state_zip_text">Los Angeles, CA 90001</string>
    <string name="store_select_button_text">Store Select</string>
    <string name="search_store">Search by street address, city, or zip code..</string>
    <string name="search_button_text">Search</string>

    <!-- back button nav -->
    <string name="back_button_desc">Back</string>"

    <!-- strings for notifications -->
    <string name="notification_title">Notification Title</string>
    <string name="notification_message">Notification message goes here</string>
    <string name="notification_time">Time</string>

    <!-- Strings used for fragments for navigation -->
    <string name="onboarding_text1">Explore the App</string>
    <string name="onboarding_text2">Register for a hands off approach on shopping!</string>
    <string name="onboarding_signInButton">Sign In</string>
    <string name="onboarding_createAccountButton">Create Account</string>
    <string name="onboarding_appNameLogo">App name logo</string>
    <string name="onboarding_restockLogo">Restock Logo</string>
    <string name="register_Text1">Sign Up</string>
    <string name="register_EmailText">Email</string>
    <string name="register_EmailHint">example@gmail.com</string>
    <string name="register_PasswordText">Create a password</string>
    <string name="register_PasswordHint">must be 8 characters</string>
    <string name="register_PasswordConfirmText">Confirm password</string>
    <string name="register_PasswordConfirmHint">repeat password</string>
    <string name="register_CheckboxText">I accept the terms and privacy policy</string>
    <string name="register_LogInButtonText">Log In</string>
    <string name="register_OrRegisterWith">Or Register with</string>
    <string name="login_EmailText">Email address</string>
    <string name="login_PasswordText">Password</string>
    <string name="login_PasswordHint">enter password</string>
    <string name="login_OrLoginWithText">Or Login With</string>
    <string name="googleButtonText">Google</string>
    <string name="login_signup_link">Don\'t have an account? Sign up</string>
    <string name="register_login_link">Already have an account? Log in</string>
    <string name="profile_tap_to_upload">Tap to upload</string>
    <string name="profile_name_hint">Name</string>
    <string name="profile_email_hint">Email</string>
    <string name="profile_save_button">Save</string>
    <string name="profile_age_hint">Age</string>
    <string name="profile_family_size_hint">Family Size</string>
    <string name="profile_favorite_store_hint">Favorite Store</string>
    <string name="profile_monthly_budget_hint">Monthly Budget</string>
    <string name="dietary_preference_prompt">Dietary Preference</string>
    <string name="profile_image_description">Profile image</string>
    <string name="list_fab_addFromPantry">Add from Pantry</string>
    <string name="list_fab_clearList">Clear List</string>
    <string name="delete_item">Delete item</string>
    <string name="quantity_hint">Qty</string>
    <string name="quantity_description">Quantity of item</string>

    <string name="lorem_ipsum">
        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam in scelerisque sem. Mauris
        volutpat, dolor id interdum ullamcorper, risus dolor egestas lectus, sit amet mattis purus
        dui nec risus. Maecenas non sodales nisi, vel dictum dolor. Class aptent taciti sociosqu ad
        litora torquent per conubia nostra, per inceptos himenaeos. Suspendisse blandit eleifend
        diam, vel rutrum tellus vulputate quis. Aliquam eget libero aliquet, imperdiet nisl a,
        ornare ex. Sed rhoncus est ut libero porta lobortis. Fusce in dictum tellus.\n\n
        Suspendisse interdum ornare ante. Aliquam nec cursus lorem. Morbi id magna felis. Vivamus
        egestas, est a condimentum egestas, turpis nisl iaculis ipsum, in dictum tellus dolor sed
        neque. Morbi tellus erat, dapibus ut sem a, iaculis tincidunt dui. Interdum et malesuada
        fames ac ante ipsum primis in faucibus. Curabitur et eros porttitor, ultricies urna vitae,
        molestie nibh. Phasellus at commodo eros, non aliquet metus. Sed maximus nisl nec dolor
        bibendum, vel congue leo egestas.\n\n
        Sed interdum tortor nibh, in sagittis risus mollis quis. Curabitur mi odio, condimentum sit
        amet auctor at, mollis non turpis. Nullam pretium libero vestibulum, finibus orci vel,
        molestie quam. Fusce blandit tincidunt nulla, quis sollicitudin libero facilisis et. Integer
        interdum nunc ligula, et fermentum metus hendrerit id. Vestibulum lectus felis, dictum at
        lacinia sit amet, tristique id quam. Cras eu consequat dui. Suspendisse sodales nunc ligula,
        in lobortis sem porta sed. Integer id ultrices magna, in luctus elit. Sed a pellentesque
        est.\n\n
        Aenean nunc velit, lacinia sed dolor sed, ultrices viverra nulla. Etiam a venenatis nibh.
        Morbi laoreet, tortor sed facilisis varius, nibh orci rhoncus nulla, id elementum leo dui
        non lorem. Nam mollis ipsum quis auctor varius. Quisque elementum eu libero sed commodo. In
        eros nisl, imperdiet vel imperdiet et, scelerisque a mauris. Pellentesque varius ex nunc,
        quis imperdiet eros placerat ac. Duis finibus orci et est auctor tincidunt. Sed non viverra
        ipsum. Nunc quis augue egestas, cursus lorem at, molestie sem. Morbi a consectetur ipsum, a
        placerat diam. Etiam vulputate dignissim convallis. Integer faucibus mauris sit amet finibus
        convallis.\n\n
        Phasellus in aliquet mi. Pellentesque habitant morbi tristique senectus et netus et
        malesuada fames ac turpis egestas. In volutpat arcu ut felis sagittis, in finibus massa
        gravida. Pellentesque id tellus orci. Integer dictum, lorem sed efficitur ullamcorper,
        libero justo consectetur ipsum, in mollis nisl ex sed nisl. Donec maximus ullamcorper
        sodales. Praesent bibendum rhoncus tellus nec feugiat. In a ornare nulla. Donec rhoncus
        libero vel nunc consequat, quis tincidunt nisl eleifend. Cras bibendum enim a justo luctus
        vestibulum. Fusce dictum libero quis erat maximus, vitae volutpat diam dignissim.
    </string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>