<?xml version="1.0" encoding="utf-8"?>

<!-- item_list.xml -->
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:padding="8dp"
    android:gravity="center_vertical">

    <!-- Item Image -->
    <ImageView
        android:id="@+id/item_image"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:src="@drawable/ic_img"
        android:contentDescription="@string/item_img_desc"
        android:layout_marginEnd="12dp"/>

    <!-- Item Name -->
    <TextView
        android:id="@+id/item_name"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text="@string/item_name_example"
        android:textSize="16sp"
        android:textStyle="bold"/>

    <!-- Edit Icon -->
    <ImageView
        android:id="@+id/edit_icon"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:background="@drawable/box_background"
        android:padding="8dp"
        android:src="@drawable/ic_edit"
        android:contentDescription="@string/edit_icon_desc"/>
</LinearLayout>
