<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <!-- Pantry Item Layout -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="12dp"
        android:gravity="center_vertical"
        android:background="?attr/selectableItemBackground">

        <ImageView
            android:id="@+id/item_image"
            android:layout_width="44dp"
            android:layout_height="44dp"
            android:scaleType="centerCrop"
            android:src="@drawable/img_placeholder"
            android:contentDescription="@string/item_img_desc"/>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical"
            android:layout_marginStart="12dp">

            <TextView
                android:id="@+id/item_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/item_name_example"
                android:textSize="18sp"
                android:textStyle="bold"
                app:drawableEndCompat="@drawable/barcode_ic"
                android:drawablePadding="6dp"
                android:visibility="visible" />

            <TextView
                android:id="@+id/item_expiration_date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/item_expiration_date_example"
                android:textSize="12sp"
                android:textColor="?android:textColorSecondary"
                android:layout_marginTop="4dp"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="end"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="22dp">

            <TextView
                android:id="@+id/item_quantity"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/item_quantity_example"
                android:textSize="14sp"
                android:textColor="?android:textColorSecondary"/>
        </LinearLayout>
    </LinearLayout>

    <!-- Floating Indicator -->
    <ImageView
        android:id="@+id/item_status_icon"
        android:layout_width="16dp"
        android:layout_height="16dp"
        android:src="@drawable/expiring_ic_indicator"
        android:contentDescription="@string/low_stock_indicator"
        android:visibility="visible"
        android:layout_gravity="top|end"
        android:layout_marginEnd="4dp"
        android:layout_marginTop="4dp"/>
</FrameLayout>
